<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent">

<Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="436dp"
        android:text="@string/btn_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/id_description"
        android:layout_width="277dp"
        android:layout_height="100dp"
        android:text="@string/id_description"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="20dp"
        app:layout_constraintLeft_toRightOf="@id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/id_name"
        android:inputType="text"
        android:importantForAutofill="yes" />

    <EditText
        android:id="@+id/id_name"
        android:layout_width="390dp"
        android:layout_height="64dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/et_name"
        app:layout_constraintBottom_toTopOf="@+id/id_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/id_location"
        android:layout_width="389dp"
        android:layout_height="65dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/id_location"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_name" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="97dp"
        android:layout_height="101dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="@id/id_name"
        app:layout_constraintRight_toLeftOf="@id/id_description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>