<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/et_name"
        android:layout_width="190dp"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:hint="@string/et_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="184dp"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="184dp"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:hint="@string/et_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/btn_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

</androidx.constraintlayout.widget.ConstraintLayout>